Remove most warnings & suppress the rest